# grid_in_bevy

./: .gitmodules  Cargo.toml  cargo-tree.txt
.cargo/: config.toml
assets/template/: test.ron
crates/bevy_template/: Cargo.toml
crates/bevy_template/assets/: test.temp.ron
crates/bevy_template/docs/: design1.md  design2.md
crates/bevy_template/examples/: basic.rs
crates/bevy_template/src/: bundle.rs  command.rs  content.rs  entity_command.rs  info.rs  lib.rs  loader.rs  process.rs  raw_template.rs  ron.rs  template.rs  template_spawner.rs
crates/gridia_datapack/: Cargo.toml
crates/gridia_template/: Cargo.toml
crates/gridia_template/assets/: base.temp.ron  test.temp.ron
crates/gridia_template/examples/: basic.rs
crates/gridia_template/src/: bundle.rs  content.rs  info.rs  lib.rs  loader.rs  template_spawner.rs
docs/: overview.md
docs/mod/: design.md
docs/tilemap/: design.md  details.md  render.md
examples/: render.rs
src/: lib.rs  main.rs
src/editor/: mod.rs
src/world/: mod.rs
src/world/chunk/: mod.rs  storage.rs  systems.rs
src/world/render/: mod.rs
src/world/tile/: mod.rs
src/world/tilemap/: mod.rs
