[package]
name = "simple_world"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/bevy needs this!
members = ["crates/bevy_template"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
noise = "0.8"
#thread_local = "1.1"
#once_cell = "1.19"
#futures-lite = "2.0.1"  # async poll task
#native-dialog = "0.7"
#sysinfo = "0.30.5"
#memory-stats = "1.1.0"
ron = { version = "0.8.1", features = ["indexmap"] }
log = "0.4.21"
env_logger = "0.11.2"
chrono = "0.4.34"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

# Bevy deps
leafwing-input-manager = "0.13.3"
#bevy_console = "0.10.0"

# UI
bevy_egui = "0.25.0"
#bevy-inspector-egui = "0.22"
bevy_editor_pls = "0.8.0"

[dependencies.bevy]
version = "0.13.0"
features = ["dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# further improve performances in a noticeable way, even for a release build (though the build itself will take longer to complete):
[profile.release]
codegen-units = 1

