[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy-sparse"]

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
thiserror = "1"
serde = "1"
ron = { version = "0.8.1", features = ["indexmap"] }
indexmap = "2.2.5"
either = "1.10.0"

[[example]]
name = "basic"
path = "examples/basic.rs"